--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -1,33 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <ImageView
-        android:layout_width="178dp"
-        android:layout_height="166dp"
-        android:scaleType="fitXY"
-        />
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    tools:context=".entites.RegisterUser">
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
+    <com.google.android.material.textfield.TextInputEditText
+        android:layout_height="match_parent"
+        android:layout_width="wrap_content">
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/etUsername"
+           android:id="@+id/Username"
             style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_margain="10dp"
             android:background="@color/white"
-            android:hint="Username"
-            android:textSize="15sp" />
-    </com.google.android.material.textfield.TextInputLayout>
+            android:hint="UserName"
+            android:textSize="15dp"
+            />
+    </com.google.android.material.textfield.TextInputEditText>
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/etPassword"
+            android:id="@+id/Password"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -46,13 +44,12 @@
         android:background="@drawable/roundedbutton"
         android:text="Login"
         android:textColor="#FFFFFF" />
-
-    <TextView
-        android:textSize="15sp"
-        android:layout_margin="10dp"
-        android:gravity="center"
-        android:id="@+id/tvRegister"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/registeruser" />
 </LinearLayout>
+<TextView
+android:textSize="15sp"
+android:layout_margin="10dp"
+android:gravity="center"
+android:id="@+id/tvRegister"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:text="@string/registeruser" />
