image on login form added

--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -6,35 +6,31 @@
     android:orientation="vertical"
     tools:context=".entites.RegisterUser">
 
-    <com.google.android.material.textfield.TextInputEditText
-        android:layout_height="match_parent"
-        android:layout_width="wrap_content">
-        <com.google.android.material.textfield.TextInputEditText
-           android:id="@+id/Username"
-            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
-            android:layout_height="match_parent"
-            android:layout_width="wrap_content"
-            android:layout_margain="10dp"
-            android:background="@color/white"
-            android:hint="UserName"
-            android:textSize="15dp"
-            />
-    </com.google.android.material.textfield.TextInputEditText>
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    <ImageView
+        android:layout_width="180dp"
+        android:layout_height="168dp"
+        android:scaleType="fitXY"
+        android:src="@drawable/signup"/>
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/Password"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+            android:id="@+id/Username"
+            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
             android:background="@color/white"
-            android:hint="Password"
-            android:inputType="textPassword"
-            android:textSize="15sp" />
-    </com.google.android.material.textfield.TextInputLayout>
+            android:hint="@string/username"
+            android:textSize="15dp" />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/Password"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_margin="10dp"
+        android:background="@color/white"
+        android:hint="Password"
+        android:inputType="textPassword"
+        android:textSize="15sp" />
 
     <Button
         android:id="@+id/btnLogin"
@@ -44,7 +40,7 @@
         android:background="@drawable/roundedbutton"
         android:text="Login"
         android:textColor="#FFFFFF" />
-</LinearLayout>
+
 <TextView
 android:textSize="15sp"
 android:layout_margin="10dp"
@@ -53,3 +49,4 @@ android:id="@+id/tvRegister"
 android:layout_width="match_parent"
 android:layout_height="wrap_content"
 android:text="@string/registeruser" />
+</LinearLayout>
